<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.nuberjonas.pompalette</groupId>
        <artifactId>pompalette-bom</artifactId>
        <version>0.9.0-SNAPSHOT</version>
        <relativePath>POMPalette-BOM/pom.xml</relativePath>
    </parent>

    <groupId>org.nuberjonas</groupId>
    <artifactId>pompalette</artifactId>
    <version>0.9.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>POMPalette</name>

    <properties>
        <java.version>21</java.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <build>
        <pluginManagement>
            <plugins>
                <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-dependency-plugin -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-dependency-plugin</artifactId>
                    <version>3.6.1</version>
                </plugin>
                <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-resources-plugin -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-resources-plugin</artifactId>
                    <version>3.3.1</version>
                </plugin>
                <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-assembly-plugin -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-assembly-plugin</artifactId>
                    <version>3.7.1</version>
                </plugin>
                <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-compiler-plugin -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.12.1</version>
                </plugin>
                <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-jar-plugin -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>3.3.0</version>
                </plugin>

                <!-- https://mvnrepository.com/artifact/org.codehaus.mojo/versions-maven-plugin -->
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>versions-maven-plugin</artifactId>
                    <version>2.16.2</version>
                </plugin>
                <!-- https://mvnrepository.com/artifact/org.codehaus.mojo/license-maven-plugin -->
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>license-maven-plugin</artifactId>
                    <version>2.4.0</version>
                </plugin>

                <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-antrun-plugin -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-antrun-plugin</artifactId>
                    <version>3.1.0</version>
                </plugin>

                <!-- https://mvnrepository.com/artifact/org.openjfx/javafx-maven-plugin -->
                <plugin>
                    <groupId>org.openjfx</groupId>
                    <artifactId>javafx-maven-plugin</artifactId>
                    <version>0.0.8</version>
                </plugin>
                <!-- https://mvnrepository.com/artifact/com.googlecode.maven-download-plugin/download-maven-plugin -->
                <plugin>
                    <groupId>com.googlecode.maven-download-plugin</groupId>
                    <artifactId>download-maven-plugin</artifactId>
                    <version>1.6.8</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <profiles>
        <profile>
            <id>JavaFX</id>

            <modules>
                <module>Core</module>
                <module>Infrastructure</module>
                <module>Mapping</module>
                <module>Application/JavaFXApplication</module>
            </modules>

            <properties>
                <license.information.directory>${project.basedir}/Application/JavaFXApplication/src/main/build/licenseInformation</license.information.directory>
            </properties>

            <build>
                <plugins>
                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>license-maven-plugin</artifactId>
                        <configuration>
                            <outputDirectory>${license.information.directory}</outputDirectory>
                            <licensesOutputDirectory>${license.information.directory}</licensesOutputDirectory>
                            <licensesOutputFile>${license.information.directory}/LICENSES.xml</licensesOutputFile>
                            <licensesExcelOutputFile>${license.information.directory}/LICENSES.xlsx</licensesExcelOutputFile>
                            <thirdPartyFilename>LICENSES.txt</thirdPartyFilename>
                            <writeExcelFile>true</writeExcelFile>
                            <excludedScopes>test</excludedScopes>
                            <excludedGroups>org.nuberjonas.pompalette*</excludedGroups>
                            <licenseMerges>
                                <licenseMerge>The Apache Software License, Version 2.0|The Apache License, Version 2.0|Apache License, Version 2.0|Apache-2.0</licenseMerge>
                                <licenseMerge>MIT License|MIT</licenseMerge>
                            </licenseMerges>
                            <licenseUrlReplacements>
                                <licenseUrlReplacement>
                                    <regexp>\Qhttps://glassfish.dev.java.net/nonav/public/CDDL+GPL.html\E</regexp>
                                    <replacement>https://oss.oracle.com/licenses/CDDL+GPL-1.1</replacement>
                                </licenseUrlReplacement>
                                <licenseUrlReplacement>
                                    <regexp>\Qhttps://openjdk.java.net/legal/gplv2+ce.html\E</regexp>
                                    <replacement>https://raw.githubusercontent.com/jonasNuber/gplv2-with-classpath-exception/main/GPLv2%20%2B%20Classpath%20Exception.txt</replacement>
                                </licenseUrlReplacement>
                            </licenseUrlReplacements>
                        </configuration>
                        <executions>
                            <execution>
                                <id>aggregate-add-third-party</id>
                                <goals>
                                    <goal>aggregate-add-third-party</goal>
                                </goals>
                            </execution>
                            <execution>
                                <id>aggregate-download-licenses</id>
                                <goals>
                                    <goal>aggregate-download-licenses</goal>
                                </goals>
                            </execution>
                        </executions>
                        <inherited>false</inherited>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>acceptance-tests</id>
            <modules>
                <module>Tests/AcceptanceTests</module>
            </modules>
        </profile>
        <profile>
            <id>integration-tests</id>
            <modules>
                <module>Tests/IntegrationTests</module>
            </modules>
        </profile>
        <profile>
            <id>default</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>

            <modules>
                <module>Core</module>
                <module>Infrastructure</module>
                <module>Application</module>
                <module>Tests</module>
                <module>Mapping</module>
            </modules>

            <build>
                <plugins>
                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>versions-maven-plugin</artifactId>
                    </plugin>
                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>license-maven-plugin</artifactId>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>